<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4F5F7"
            android:fillViewport="true">

    <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <!-- 标题区 -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_vulnerabilities_lab"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#303F9F"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/development_learning"
                android:textSize="14sp"
                android:textColor="#888888"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="24dp"/>

        <!-- HTTP 卡片 -->
        <androidx.cardview.widget.CardView
                android:id="@+id/card_http"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/http_title"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="#3F51B5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/http_info"
                        android:textSize="13sp"
                        android:textColor="#999999"
                        android:layout_marginTop="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- 加密算法卡片 -->
        <androidx.cardview.widget.CardView
                android:id="@+id/card_crypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/crypto_title"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="#FF9800"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/crypto_info"
                        android:textSize="13sp"
                        android:textColor="#999999"
                        android:layout_marginTop="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- root检测卡片 -->
        <androidx.cardview.widget.CardView
                android:id="@+id/card_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/root_title"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="#FF0000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/root_info"
                        android:textSize="13sp"
                        android:textColor="#999999"
                        android:layout_marginTop="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- 其他检测卡片 -->
        <androidx.cardview.widget.CardView
                android:id="@+id/card_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/other_title"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="#CDDC39"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/other_info"
                        android:textSize="13sp"
                        android:textColor="#999999"
                        android:layout_marginTop="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- VPN检测 -->
        <!-- frida检测 -->
        <!-- 检测设备型号，例如模拟器等 -->
        <!-- 认证获取 -->
        <!-- 广告绕过-->

    </LinearLayout>
</ScrollView>
