<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4F5F7"
            android:fillViewport="true">

    <LinearLayout android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <TextView android:text="@string/http_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#303F9F"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="4dp">

            <LinearLayout android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">
                <!-- 第一行 -->
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:layout_marginBottom="8dp">

                    <Button android:id="@+id/btn_http_get"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/http_get"/>

                    <Button
                            android:id="@+id/btn_http_post"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/http_post"/>
                </LinearLayout>

                <!-- 第二行 -->
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:layout_marginBottom="8dp">

                    <Button android:id="@+id/btn_okhttp3_get"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/okhttp3get"/>

                    <Button android:id="@+id/btn_okhttp3_post"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/okhttp3_post"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp">

            <WebView android:id="@+id/web_result_http"
                    android:text="结果：null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
